--- a/style.css
+++ b/style.css
@@ -137,7 +137,8 @@ body {
 
 .hero-content h1 {
   font-size: 2.5rem;
-  color: white;
+  font-family: Roboto, sans;
+  color: #333399
 }
 
 .hero-content p {
@@ -147,10 +148,10 @@ body {
 .hero-logos {
   position: relative;
   z-index: 1;
-  margin-top: 20px; 
+  margin-top: 100px; 
   display: flex;
   gap: 40px; 
-  justify-content: right; 
+  justify-content: left; 
   filter: drop-shadow(1px 1px 1px white);
 }
 
@@ -586,8 +587,8 @@ th {
 .footer {
   background-color: #f5f5f5;
   padding: 40px 0;
-  color: #020E54;
-  /*color: #333;*/
+ /* color: #020E54;
+  color: #333;*/
 }
 
 .footer-content {
